# tomakrdown

./: .gitignore  LICENSE  README.md  pyproject.toml
tomarkdown/: cli.py  core.py
