[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomarkdown"
version = "0.1.0"
authors = [
    {name = "anbturki", email = "aliturkix@gmail.com"},
]
description = "Directory to markdown documentation generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
tomarkdown = "tomarkdown.cli:main"

[project.urls]
Homepage = "https://github.com/anbturki/tomarkdown"
Documentation = "https://github.com/anbturki/tomarkdown#readme"
Repository = "https://github.com/anbturki/tomarkdown"
Issues = "https://github.com/anbturki/tomarkdown/issues"